# weather-app

./: .env.sample  Cargo.toml
src/: main.rs
src/api/: mod.rs
