[package]
name = "weather-app"
version = "0.1.0"
authors = ["Karol Moroz <k.j.moroz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
dotenv = "0.15.0"
url = "2.2.2"
futures = "0.3.15"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.64"
